syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__bounds__tests__it_matches_for_lifetimes.snap
---
source: syn-state-machine/src/common_tokens/bounds.rs
expression: "crate::parse::<ForLifetimes>(::quote::quote! { for < 'a, 'b > })"
---
Ok(
    (
        ForLifetimes(
            GenericParams(
                [
                    LifetimeParam(
                        [],
                        LifetimeParam {
                            id: Ident(
                                a,
                            ),
                            bounds: None,
                        },
                    ),
                    LifetimeParam(
                        [],
                        LifetimeParam {
                            id: Ident(
                                b,
                            ),
                            bounds: None,
                        },
                    ),
                ],
            ),
        ),
        0,
    ),
)
