syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__bounds__tests__it_matches_for_paths.snap
---
source: syn-state-machine/src/common_tokens/bounds.rs
expression: "crate::parse::<TraitBound>(::quote::quote! { for < 'a > std :: fmt :: Debug })"
---
Ok(
    (
        TraitBound {
            q: false,
            for: Some(
                GenericParams(
                    [
                        LifetimeParam(
                            [],
                            LifetimeParam {
                                id: Ident(
                                    a,
                                ),
                                bounds: None,
                            },
                        ),
                    ],
                ),
            ),
            ty: TypePath {
                leading: false,
                segments: [
                    Simple {
                        id: Id(
                            Ident(
                                std,
                            ),
                        ),
                    },
                    Simple {
                        id: Id(
                            Ident(
                                fmt,
                            ),
                        ),
                    },
                    Simple {
                        id: Id(
                            Ident(
                                Debug,
                            ),
                        ),
                    },
                ],
            },
        },
        0,
    ),
)
