syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__bounds__tests__it_matches_lifetime.snap
---
source: syn-state-machine/src/common_tokens/bounds.rs
expression: "crate::parse::<Lifetime>(::quote::quote! { 'a })"
---
Ok(
    (
        Lifetime(
            Ident(
                a,
            ),
        ),
        0,
    ),
)
