syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__bounds__tests__it_matches_lifetime_type_param_bound.snap
---
source: syn-state-machine/src/common_tokens/bounds.rs
expression: "crate::parse::<TypeParamBound>(::quote::quote! { 'a })"
---
Ok(
    (
        Lifetime(
            Lifetime(
                Ident(
                    a,
                ),
            ),
        ),
        0,
    ),
)
