syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__bounds__tests__it_matches_lifetimes_bounds.snap
---
source: syn-state-machine/src/common_tokens/bounds.rs
expression: "crate::parse::<LifetimeBounds>(::quote::quote! { 'a + 'b })"
---
Ok(
    (
        LifetimeBounds(
            [
                Lifetime(
                    Ident(
                        a,
                    ),
                ),
                Lifetime(
                    Ident(
                        b,
                    ),
                ),
            ],
        ),
        0,
    ),
)
