syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__bounds__tests__it_matches_path_type_param_bound.snap
---
source: syn-state-machine/src/common_tokens/bounds.rs
expression: "crate::parse::<TypeParamBound<Infallible>>(::quote::quote! {\n            std :: fmt :: Debug\n        })"
---
Ok(
    (
        TraitBound(
            TraitBound {
                q: false,
                for: None,
                ty: TypePath {
                    leading: false,
                    segments: [
                        Simple {
                            id: Id(
                                Ident(
                                    std,
                                ),
                            ),
                        },
                        Simple {
                            id: Id(
                                Ident(
                                    fmt,
                                ),
                            ),
                        },
                        Simple {
                            id: Id(
                                Ident(
                                    Debug,
                                ),
                            ),
                        },
                    ],
                },
            },
        ),
        0,
    ),
)
